--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <resources>
     <string name="alert_clearList">Es-tu sûr.e de vouloir effacer cette liste?\nCette action n\'est pas réversible.</string>
-    <string name="alert_deleteRecipe">Es-tu sûr.e de vouloir supprimer cette recette?\nCette action n\'est pas réversible.</string>
     <string name="alert_deleteAccount">Es-tu sûr.e de vouloir supprimer ton compte?\nCette action n\'est pas réversible.</string>
     <string name="alert_deleteCatFridge">Attention: cette action va également supprimer cette catégorie et tous ces éléments dans \"Liste de Courses\".</string>
     <string name="alert_deleteCatGroceries">Attention: cette action va également supprimer cette catégorie et tous ces éléments dans \"Mon Frigo\".</string>
+    <string name="alert_deleteRecipe">Es-tu sûr.e de vouloir supprimer cette recette?\nCette action n\'est pas réversible.</string>
     <string name="alert_exitDraft">Si tu quittes cette page, les modifications apportées à ton brouillon seront perdues.</string>
-    <string name="alert_exitRecipeEdit">Si tu quittes cette page, les modifications apportées à ta recette seront perdues.</string>
     <string name="alert_exitRecipe">Si tu quittes cette page, ta recette sera perdue.\nTu peux l\'ajouter à tes brouillons pour revenir dessus plus tard.</string>
+    <string name="alert_exitRecipeEdit">Si tu quittes cette page, les modifications apportées à ta recette seront perdues.</string>
     <string name="alert_termsConditions">
         Cette application est à usage strictement privé: installe-la seulement si Alice te l\'a donnée.\n
         \nNe partage pas le fichier d\'installation sans l\'accord d\'Alice. Si elle trouve un compte non autorisé, elle le supprimera illico presto.\n
@@ -20,11 +20,13 @@
     <string name="button_accept">Accepter</string>
     <string name="button_addProfilePicture">Ajouter une photo de profil</string>
     <string name="button_addRecipePicture">Ajouter une photo</string>
+    <string name="button_addToGroceries">Ajouter les ingrédients à la liste de courses</string>
     <string name="button_cancel">Annuler</string>
     <string name="button_changeImage">Gallerie</string>
     <string name="button_clearList">Effacer toute la liste</string>
     <string name="button_delete">Supprimer</string>
     <string name="button_deleteAccount">Supprimer le compte</string>
+    <string name="button_deleteRecipe">Supprimer la recette</string>
     <string name="button_drafts">Mes Brouillons</string>
     <string name="button_edit">Modifier</string>
     <string name="button_modifyProfilePicture">Modifier la photo de profil</string>
@@ -46,7 +48,6 @@
     <string name="button_termsConditions">Appuie pour accepter les Terms et Conditions (obligatoire)</string>
 
     <string name="desc_add">bouton ajouter</string>
-    <string name="desc_remove">bouton enlever</string>
     <string name="desc_appLogo">logo app</string>
     <string name="desc_burgerMenu">menu</string>
     <string name="desc_changePicture">changer photo</string>
@@ -61,7 +62,9 @@
     <string name="desc_loading">chargement</string>
     <string name="desc_profilePic">photo de profile</string>
     <string name="desc_recipePicture">photo de la recette</string>
+    <string name="desc_remove">bouton enlever</string>
     <string name="desc_removePicture">retirer photo</string>
+    <string name="desc_reset">bouton reset</string>
     <string name="desc_shop">"bouton "ajouter à la liste de courses"</string>
     <string name="desc_takePicture">prendre photo</string>
     <string name="desc_textFieldIcon">icone du champ de texte</string>
@@ -166,16 +169,22 @@
     <string name="txt_emptyFridge">Ton frigo est vide.\nAppuie sur le bouton Modification pour ajouter des articles.</string>
     <string name="txt_emptyGroceries">Ta liste de courses est vide.\nAppuie sur le bouton Modification pour ajouter des articles.</string>
     <string name="txt_favouriteOnly">Uniquement recettes préférées</string>
+    <string name="txt_for">Pour</string>
     <string name="txt_me">Moi</string>
     <string name="txt_noBuddies">Il n\'y a pas encore d\'autres Buddies sur l\'app pour le moment!</string>
     <string name="txt_noDrafts">Tu n\'as aucun brouillon sauvegardé pour le moment.</string>
     <string name="txt_noRecipes">Il n\'y a pas encore de recettes sur l\'app!</string>
     <string name="txt_noResults">Il n\'y a aucune recette correspondant à ces filtres.</string>
     <string name="txt_numberRecipes">Total de recettes ajoutées : %1$s</string>
+    <string name="txt_people">personnes</string>
+    <string name="txt_person">personne</string>
+    <string name="txt_piece">pièce</string>
+    <string name="txt_pieces">pièces</string>
     <string name="txt_quantity">Quantité</string>
     <string name="txt_recipeCreator">Créée par %1$s</string>
     <string name="txt_recipeRequirements">Les champs marqués par un astérisque rouge sont obligatoires.</string>
     <string name="txt_removeFav">Dans tes Favoris - Appuie pour la retirer</string>
+    <string name="txt_resetQty">Revenir aux quantités d\'origine</string>
     <string name="txt_systemDark">Sombre</string>
     <string name="txt_systemDefault">Thème par défault du système</string>
     <string name="txt_systemLight">Clair</string>
@@ -196,12 +205,11 @@
     <string name="unit_pin">pincée</string>
     <string name="unit_sachet">sachet</string>
     <string name="unit_tasse">tasse</string>
-    <string name="txt_for">Pour</string>
-    <string name="txt_people">personnes</string>
-    <string name="txt_person">personne</string>
-    <string name="txt_pieces">pièces</string>
-    <string name="txt_piece">pièce</string>
-    <string name="button_deleteRecipe">Supprimer la recette</string>
-    <string name="desc_reset">bouton reset</string>
-    <string name="txt_resetQty">Revenir aux quantités d\'origine</string>
+    <string name="title_addToGroceries">Ajouter aux Courses</string>
+    <string name="txt_yourFridge">ton Frigo</string>
+    <string name="txt_yourGroceries">tes Courses</string>
+    <string name="txt_existingIngredient">\"%1$s\" sous %2$s dans %3$s</string>
+    <string name="txt_youHave">"Tu as "</string>
+    <string name="desc_help">bouton aide</string>
+    <string name="txt_categoryHelp">Catégorie</string>
 </resources>
