--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="button_cancel">Annuler</string>
     <string name="button_changeImage">Gallerie</string>
     <string name="button_clearList">Effacer toute la liste</string>
+    <string name="button_confirm">Confirmer</string>
     <string name="button_delete">Supprimer</string>
     <string name="button_deleteAccount">Supprimer le compte</string>
     <string name="button_deleteRecipe">Supprimer la recette</string>
@@ -32,7 +33,9 @@
     <string name="button_modifyProfilePicture">Modifier la photo de profil</string>
     <string name="button_modifyRecipePicture">Modifier la photo</string>
     <string name="button_newRecipe">Nouvelle Recette</string>
+    <string name="button_notes">Notes personnelles</string>
     <string name="button_options">options</string>
+    <string name="button_pdf">Télécharger le PDF</string>
     <string name="button_publish">Publier</string>
     <string name="button_quit">Quitter</string>
     <string name="button_removeImage">Retirer</string>
@@ -41,6 +44,7 @@
     <string name="button_saveDraft">Enregistrer le brouillon</string>
     <string name="button_seeResults">Voir les résulats</string>
     <string name="button_sendToFridge">Envoyer les courses dans le Frigo</string>
+    <string name="button_shop">Ajouter aux Courses</string>
     <string name="button_signIn">S\'enregistrer</string>
     <string name="button_signOut">Se déconnecter</string>
     <string name="button_takePicture">Camera</string>
@@ -59,6 +63,7 @@
     <string name="desc_filters">filtres</string>
     <string name="desc_goBack">retour</string>
     <string name="desc_googleLogo">logo google</string>
+    <string name="desc_help">bouton aide</string>
     <string name="desc_loading">chargement</string>
     <string name="desc_profilePic">photo de profile</string>
     <string name="desc_recipePicture">photo de la recette</string>
@@ -91,6 +96,7 @@
     <string name="field_keywords">Qu\'est-ce que tu cherches ?</string>
     <string name="field_maxChar">max. %1$s caractères</string>
     <string name="field_none">-</string>
+    <string name="field_notes">Écris tes notes personnelles sur cette recette. Seulement toi peux voir ces notes.</string>
     <string name="field_recipeInstructions">Entre les instructions de ta recette</string>
     <string name="field_recipeName">Entre le nom de ta recette</string>
     <string name="field_username">Nom d\'utilisateur</string>
@@ -138,6 +144,7 @@
     <string name="title_createRecipe">Crée une nouvelle recette</string>
     <string name="title_creator">Créateur</string>
     <string name="title_diet">Régime</string>
+    <string name="title_download">Télécharger cette recette en tant que PDF</string>
     <string name="title_editDraft">Modifie ton Brouillon</string>
     <string name="title_editRecipe">Modifie ta recette</string>
     <string name="title_filters">Filtres</string>
@@ -147,9 +154,11 @@
     <string name="title_ingredients">Ingrédients</string>
     <string name="title_language">Langue</string>
     <string name="title_miscellaneous">Divers</string>
+    <string name="title_notes">Notes Personnelles</string>
     <string name="title_notifications">Notifications</string>
     <string name="title_origin">Origine</string>
     <string name="title_recipe">Recette</string>
+    <string name="title_recipeIngredients">Ingrédients</string>
     <string name="title_recipeInstructions">Instructions</string>
     <string name="title_recipeName">Nom de la recette</string>
     <string name="title_recipes">Recettes</string>
@@ -159,6 +168,7 @@
     <string name="title_theme">Thème</string>
 
     <string name="toast_categoryName">Cette catégorie existe déjà. Sauvegarde d\'abord tes modifications.</string>
+    <string name="toast_downloaded">Fichier téléchargé! Check tes Téléchargements.</string>
     <string name="toast_ingredientExists">Cet ingrédient existe déjà dans ta liste de courses.</string>
     <string name="toast_internetCo">Une erreur de réseau est survenue. Merci de vérifier ta connexion Internet.</string>
     <string name="toast_savedDraft">Ton brouillon a été enregistré.</string>
@@ -166,8 +176,10 @@
 
     <string name="txt_addFav">Ajouter aux Favoris</string>
     <string name="txt_allIngredientsOnly">Uniquement si j\'ai les ingrédients</string>
+    <string name="txt_category">Catégorie</string>
     <string name="txt_emptyFridge">Ton frigo est vide.\nAppuie sur le bouton Modification pour ajouter des articles.</string>
     <string name="txt_emptyGroceries">Ta liste de courses est vide.\nAppuie sur le bouton Modification pour ajouter des articles.</string>
+    <string name="txt_existingIngredient">\"%1$s\" sous %2$s dans %3$s</string>
     <string name="txt_favouriteOnly">Uniquement recettes préférées</string>
     <string name="txt_for">Pour</string>
     <string name="txt_me">Moi</string>
@@ -176,6 +188,7 @@
     <string name="txt_noRecipes">Il n\'y a pas encore de recettes sur l\'app!</string>
     <string name="txt_noResults">Il n\'y a aucune recette correspondant à ces filtres.</string>
     <string name="txt_numberRecipes">Total de recettes ajoutées : %1$s</string>
+    <string name="txt_pdfImageError">L\'image n\'a pas pu être chargée</string>
     <string name="txt_people">personnes</string>
     <string name="txt_person">personne</string>
     <string name="txt_piece">pièce</string>
@@ -190,6 +203,9 @@
     <string name="txt_systemLight">Clair</string>
     <string name="txt_unit">Unité</string>
     <string name="txt_unnamed">Sans nom</string>
+    <string name="txt_youHave">"Tu as "</string>
+    <string name="txt_yourFridge">ton Frigo</string>
+    <string name="txt_yourGroceries">tes Courses</string>
 
     <string name="unit_bouquet">bouquet</string>
     <string name="unit_cc">cc</string>
@@ -205,14 +221,4 @@
     <string name="unit_pin">pincée</string>
     <string name="unit_sachet">sachet</string>
     <string name="unit_tasse">tasse</string>
-    <string name="title_recipeIngredients">Ingrédients</string>
-    <string name="txt_yourFridge">ton Frigo</string>
-    <string name="txt_yourGroceries">tes Courses</string>
-    <string name="txt_existingIngredient">\"%1$s\" sous %2$s dans %3$s</string>
-    <string name="txt_youHave">"Tu as "</string>
-    <string name="desc_help">bouton aide</string>
-    <string name="txt_category">Catégorie</string>
-    <string name="button_shop">Ajouter aux Courses</string>
-    <string name="button_notes">Ajouter des notes</string>
-    <string name="button_pdf">Télécharger le PDF</string>
 </resources>
