--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,7 @@
     <string name="dst_settings">Paramètres</string>
 
     <string name="field_addCategory">Ajouter une catégorie</string>
+    <string name="field_addSection">Ajouter une section (ex: Pour la farce)</string>
     <string name="field_addIngredient">Ajouter un ingrédient</string>
     <string name="field_addItem">Ajouter un article</string>
     <string name="field_bio">Bio</string>
@@ -171,7 +172,8 @@
 
     <string name="toast_bugReport">Merci d\'avoir signalé ce bug !</string>
     <string name="toast_categoryName">Cette catégorie existe déjà. Sauvegarde d\'abord tes modifications.</string>
-    <string name="toast_downloaded">Fichier téléchargé! Check tes Téléchargements.</string>
+    <string name="toast_sectionName">Cette section existe déjà.</string>
+    <string name="toast_downloaded">Fichier téléchargé! Check tes Fichiers.</string>
     <string name="toast_emptyBugReport">Merci de décrire le bug afin de pouvoir le signaler.</string>
     <string name="toast_ingredientExists">Cet ingrédient existe déjà dans ta liste de courses.</string>
     <string name="toast_internetCo">Une erreur de réseau est survenue. Merci de vérifier ta connexion Internet.</string>
