--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="button_save">Sauvegarder</string>
     <string name="button_saveDraft">Enregistrer le brouillon</string>
     <string name="button_seeResults">Voir les résulats</string>
+    <string name="button_send">Envoyer</string>
     <string name="button_sendBug">Signaler un bug</string>
     <string name="button_sendToFridge">Envoyer les courses dans le Frigo</string>
     <string name="button_shop">Ajouter aux Courses</string>
@@ -65,6 +66,7 @@
     <string name="desc_goBack">retour</string>
     <string name="desc_googleLogo">logo google</string>
     <string name="desc_help">bouton aide</string>
+    <string name="desc_imageIcon">icone du bouton sur image</string>
     <string name="desc_loading">chargement</string>
     <string name="desc_profilePic">photo de profile</string>
     <string name="desc_recipePicture">photo de la recette</string>
@@ -89,9 +91,9 @@
     <string name="dst_settings">Paramètres</string>
 
     <string name="field_addCategory">Ajouter une catégorie</string>
-    <string name="field_addSection">Ajouter une section (ex: Pour la farce)</string>
     <string name="field_addIngredient">Ajouter un ingrédient</string>
     <string name="field_addItem">Ajouter un article</string>
+    <string name="field_addSection">Ajouter une section (ex: Pour la farce)</string>
     <string name="field_bio">Bio</string>
     <string name="field_bugReport">Merci de décrire le bug et ce qui l\a provoqué.</string>
     <string name="field_ingredientName">Nom de l\'ingrédient</string>
@@ -172,18 +174,19 @@
 
     <string name="toast_bugReport">Merci d\'avoir signalé ce bug !</string>
     <string name="toast_categoryName">Cette catégorie existe déjà. Sauvegarde d\'abord tes modifications.</string>
-    <string name="toast_sectionName">Cette section existe déjà.</string>
     <string name="toast_downloaded">Fichier téléchargé! Check tes Fichiers.</string>
     <string name="toast_emptyBugReport">Merci de décrire le bug afin de pouvoir le signaler.</string>
     <string name="toast_ingredientExists">Cet ingrédient existe déjà dans ta liste de courses.</string>
     <string name="toast_internetCo">Une erreur de réseau est survenue. Merci de vérifier ta connexion Internet.</string>
     <string name="toast_savedDraft">Ton brouillon a été enregistré.</string>
+    <string name="toast_sectionName">Cette section existe déjà.</string>
     <string name="toast_unknownError">Une erreur est survenue, merci de réessayer. Si le bug persiste, contacte Alice !</string>
 
     <string name="txt_addFav">Ajouter aux Favoris</string>
     <string name="txt_allIngredientsOnly">Uniquement si j\'ai les ingrédients</string>
     <string name="txt_category">Catégorie</string>
     <string name="txt_credits">Créée par %1$s sur %2$s</string>
+    <string name="txt_dateJoined">A rejoint le %1$s</string>
     <string name="txt_emptyFridge">Ton frigo est vide.\nAppuie sur le bouton Modification pour ajouter des articles.</string>
     <string name="txt_emptyGroceries">Ta liste de courses est vide.\nAppuie sur le bouton Modification pour ajouter des articles.</string>
     <string name="txt_existingIngredient">\"%1$s\" sous %2$s dans %3$s</string>
@@ -196,7 +199,7 @@
     <string name="txt_noDrafts">Tu n\'as aucun brouillon sauvegardé pour le moment.</string>
     <string name="txt_noRecipes">Il n\'y a pas encore de recettes sur l\'app!</string>
     <string name="txt_noResults">Il n\'y a aucune recette correspondant à ces filtres.</string>
-    <string name="txt_numberRecipes">Total de recettes ajoutées : %1$s</string>
+    <string name="txt_numberRecipes">Recettes créées</string>
     <string name="txt_pdfImageError">L\'image n\'a pas pu être chargée</string>
     <string name="txt_people">personnes</string>
     <string name="txt_person">personne</string>
@@ -232,6 +235,5 @@
     <string name="unit_pin">pincée</string>
     <string name="unit_sachet">sachet</string>
     <string name="unit_tasse">tasse</string>
-    <string name="button_send">Envoyer</string>
-    <string name="desc_imageIcon">icone du bouton sur image</string>
+    <string name="txt_bio">Bio</string>
 </resources>
